--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Muli:700|Open+Sans:400,700");
 body {
   font-family: "Open Sans", sans-serif;
+  color: #878786;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Muli", sans-serif;
+  font-weight: 700;
 }
