--- a/sass/includes/_global.scss
+++ b/sass/includes/_global.scss
@@ -1,3 +1,16 @@
 body {
 	font-family: $open;
+	color: $gray;
+	font-size: 1rem;
+	line-height: 1.5;
+}
+
+p {
+	font-size: 1.125rem;
+	margin-bottom: 1.5rem;
+}
+
+h1, h2, h3, h4 {
+	font-family: $muli;
+	font-weight: 700;
 }
